# iclcv

./: CMakeLists.txt  README.md
ICLCV/apps/lens-undistortion-calibration-opencv/: lens-undistortion-calibration-opencv.cpp
ICLCV/src/ICLCV/: CheckerboardDetector.cpp  LensUndistortionCalibrator.cpp  ORBFeatureDetector.cpp  OpenCVCamCalib.cpp  OpenSurfLib.cpp
ICLCore/src/ICLCore/: CCFunctions.cpp  Core.h  CoreFunctions.cpp  Img.cpp  Img.h  ImgBase.h  OpenCV.cpp  PseudoColorConverter.cpp  Types.h
ICLFilter/: CMakeLists.txt
ICLFilter/src/ICLFilter/: ColorDistanceOp.cpp  GradientImage.cpp  InplaceArithmeticalOp.cpp  LocalThresholdOp.cpp  LocalThresholdOpHelpers.h  LocalThresholdOpHelpers_16u_false.cpp  LocalThresholdOpHelpers_16u_true.cpp  MirrorOp.cpp  ThresholdOp.cpp  WienerOp.cpp
ICLGeom/src/ICLGeom/: ConfigurableDepthImageSegmenter.cpp
ICLIO/src/ICLIO/: FileWriterPluginPNG.cpp  GenericGrabber.cpp  LibAVVideoWriter.cpp
ICLIO/src/ICLIO/proto/: RSBImage.proto
ICLMath/src/ICLMath/: FFTUtils.cpp
ICLQt/: Makefile.am
ICLQt/src/ICLQt/: GLImg.cpp  GLPaintEngine.cpp  QImageConverter.cpp  Widget.cpp
ICLUtils/src/ICLUtils/: BasicTypes.h  CLDeviceContext.h  CLIncludes.h  CLProgram.h  Macros.h  SSETypes.h  Thread.cpp
_AutomakeBranch/: Makefile.am  aclocal.m4  configure
_AutomakeBranch/ICLCore/: Makefile.am
_AutomakeBranch/ICLCore/examples/: test_matrix.cpp
_AutomakeBranch/ICLCore/src/.libs/: libICLCore.so.0
_AutomakeBranch/ICLIO/: Makefile.am  Makefile.in
_AutomakeBranch/ICLIO/examples/: aaa_test.cpp
_AutomakeBranch/ICLUtils/: Makefile.am
_AutomakeBranch/ICLUtils/src/: config.h.in
_AutomakeBranch/autom4te.cache/: output.1  output.3  output.4  traces.2  traces.4  traces.5
msvc/: ICLUtils.vcproj
trunk/_AutomakeBranch/: Makefile.in  configure.ac
trunk/_AutomakeBranch/ICLCore/: Makefile.in
trunk/_AutomakeBranch/ICLCore/src/.libs/: libICLCore.lai  libICLCore.so.0.0.0
trunk/_AutomakeBranch/ICLUtils/: Makefile.in  config.h.in
trunk/_AutomakeBranch/ICLUtils/src/: iclIteratorRange.h
trunk/_AutomakeBranch/autom4te.cache/: output.5  requests  traces.3
